# ImageProcess

./: .gitignore  CMakeLists.txt  ForTest.cpp  Mainwindow2.qml  README.md  capturescreen.cpp  capturescreen.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mouse_click_cap.cpp  qt2.pro  select_pic_first.cpp  select_pic_first.h  selectpart.cpp  show_background.cpp  show_background.h
GeneratedFiles/: ui_mainwindow.h  ui_need_save.h
GeneratedFiles/Debug/: moc_mainwindow.cpp
GeneratedFiles/Release/: moc_mainwindow.cpp  moc_need_save.cpp  moc_selectpart.cpp
Windows/: QtHello.sln
Windows/QtHello/: ForTest.cpp  IPP.pro  QtHello.vcxproj  QtHello.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  need_save.cpp  need_save.h  need_save.ui  select_pic_first.ui  selectpart.h
Windows/QtHello/GeneratedFiles/: ui_mainwindow.h  ui_select_pic_first.h
Windows/QtHello/include/: IPP_Core.h  IPP_World.h  advance_img.h  basic_img.h
Windows/QtHello/src/: advance_img.cpp  basic_img.cpp
include/: IPP_Core.h  IPP_USAGE.h  IPP_World.h  advance_img.h  basic_img.h  camera.h  video.h
include/camera/: camshift.h  face_detection.h  optical_flow.h
include/video/: fisheye.h
src/: advance_img.cpp  basic_img.cpp  camera.cpp  video.cpp
src/camera/: camshift.cpp  face_detection.cpp  optical_flow.cpp
src/fisheye/: fisheye.cpp
x64/Debug/QtHello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/QtHello.tlog/: CL.command.1.tlog  CL.read.1.tlog  (+7 more)
(+26 files in other folders)
